--- a/roles/gangtise/templates/gangtise-auth-service.yaml.j2
+++ b/roles/gangtise/templates/gangtise-auth-service.yaml.j2
@@ -54,6 +54,7 @@ metadata:
   name: gangtise-auth-service
   namespace: {{ spring_app_namespace }}
 spec:
+  clusterIP: None
   ports:
     - port: 10010
       protocol: TCP
