--- a/roles/gangtise/templates/gts-keyboard-yhty.yaml.j2
+++ b/roles/gangtise/templates/gts-keyboard-yhty.yaml.j2
@@ -59,6 +59,7 @@ metadata:
   name: gts-keyboard-yhty
   namespace: {{ spring_app_namespace }}
 spec:
+  clusterIP: None
   ports:
     - port: 13006
       protocol: TCP
