--- a/roles/gangtise/templates/eureka.yaml.j2
+++ b/roles/gangtise/templates/eureka.yaml.j2
@@ -19,6 +19,8 @@ spec:
       labels:
         app: eureka
     spec:
+      imagePullSecrets:
+      - name: {{ container_secret }}
       containers:
         - env:
             - name: MY_POD_NAME
