--- a/roles/gangtise/templates/gangtise-auth-service.yaml.j2
+++ b/roles/gangtise/templates/gangtise-auth-service.yaml.j2
@@ -22,6 +22,8 @@ spec:
       labels:
         app: gangtise-auth-service
     spec:
+      imagePullSecrets:
+      - name: {{ container_secret }}
       containers:
         - envFrom:
             - configMapRef:
