--- a/roles/gangtise/templates/gts-keyboard-yhty.yaml.j2
+++ b/roles/gangtise/templates/gts-keyboard-yhty.yaml.j2
@@ -22,6 +22,8 @@ spec:
       labels:
         app: gts-keyboard-yhty
     spec:
+      imagePullSecrets:
+      - name: {{ container_secret }}
       containers:
         - env:
             - name: ES_CLUSTER_NAME
