--- a/roles/gangtise/templates/quark-maxwell.yaml.j2
+++ b/roles/gangtise/templates/quark-maxwell.yaml.j2
@@ -22,6 +22,8 @@ spec:
       labels:
         app: quark-maxwell
     spec:
+      imagePullSecrets:
+      - name: {{ container_secret }}
       containers:
       - env:
         - name: CONFIG_NAME
