--- a/roles/gangtise/templates/ignite.yaml.j2
+++ b/roles/gangtise/templates/ignite.yaml.j2
@@ -1,8 +1,4 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: {{ ignite_namespace }}
+
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -162,6 +158,8 @@ spec:
         app: ignite
         k8s.eip.work/layer: db
     spec:
+      imagePullSecrets:
+      - name: {{ container_secret }}
       containers:
         - env:
             - name: OPTION_LIBS
