--- a/roles/gangtise/templates/namespaces.yaml.j2
+++ b/roles/gangtise/templates/namespaces.yaml.j2
@@ -8,3 +8,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ ignite_namespace }}
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: {{ kafka_namespace }}
