--- a/roles/gangtise/templates/spring-config.yaml.j2
+++ b/roles/gangtise/templates/spring-config.yaml.j2
@@ -16,4 +16,10 @@ kind: ConfigMap
 metadata:
   name: spring-config
   namespace: {{ spring_app_namespace }}
-
+---
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: local-storage
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
