--- a/roles/gangtise/templates/gangtise-auth-service.yaml.j2
+++ b/roles/gangtise/templates/gangtise-auth-service.yaml.j2
@@ -23,13 +23,13 @@ spec:
         app: gangtise-auth-service
     spec:
       imagePullSecrets:
-      - name: {{ container_secret }}
+        - name: {{ container_secret }}
       containers:
         - envFrom:
             - configMapRef:
                 name: spring-config
           image: {{ auth_service_image }}
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           name: gangtise-auth-service
           ports:
             - containerPort: 10010
@@ -56,7 +56,6 @@ metadata:
   name: gangtise-auth-service
   namespace: {{ spring_app_namespace }}
 spec:
-  clusterIP: None
   ports:
     - port: 10010
       protocol: TCP
